deleted furhter trac, favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,10 @@
     {% else %}
     {% if page.photo_url %}
     <meta property="og:image" content="{{ page.photo_url }}">
-    
+
     {% endif %}
-    <meta property="og:url" content="http://rsms.me{{ page.url | remove_first:'index.html' }}">
-    <meta property="og:site_name" content="rsms.me">
+    <meta property="og:url" content="http://nikolaos.soultanidis{{ page.url | remove_first:'index.html' }}">
+    <meta property="og:site_name" content="nikolaos.soultanidis.com">
     <meta property="og:type" content="article">
     <meta property="og:locale" content="en_GB" />
     {% if page.date %}
