--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
     <div id="fb-root"></div><script></script-->
     <iframe id="sidebar"></iframe>
     <header>
-      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-2-2.png" width="160" height="50" alt="Signature"></a></h1>
+      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/logo-nikolaos-soultanidis.png" width="160" height="50" alt="Signature"></a></h1>
       <ul class="navigation">
         <li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
         <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Archived articles">Archive</a></li>
