--- a/res/screen.css
+++ b/res/screen.css
@@ -19,7 +19,7 @@
 /* Base */
 * { margin:0; padding:0; font-family:inherit; }
 body {
-  background:#ddd;
+  background-image:res/hk screenshot.png;
   color:#444;
   font:14px 'Poly', georgia, serif;
   line-height:1.5;
@@ -146,7 +146,7 @@ div.content.photo {
   div.content:not(.sub) h1:first-child {
     margin-top:0; font-size:300%;
   }
-  
+
   div.content img, div.content iframe { display:block; max-width:100%; margin:1em 0; }
   div.content iframe { border:none; }
   div.content *[align=right] { margin:0 0 1em 1em; }
@@ -155,7 +155,7 @@ div.content.photo {
   /*div.post strong { font-weight:inherit; background:#FBF4B1; }*/
   div.content li { margin-left: 2em; margin-bottom:0.3em; }
   div.content ul > li { margin-left:1.4em; }
-  
+
   div.content blockquote {
     font-family: 'Poly', georgia;
     font-style:italic;
@@ -206,7 +206,7 @@ div.content.photo {
   div.content sup:target a { padding:2px 5px; }
   div.content div.footnotes li { color:#999; }
   div.content div.footnotes li:target { background:#ffc; color:inherit; }
-  
+
   /* wide objects */
   /* this is b0rked */
   /*div.content *[alt~="fullbleed"] {
@@ -328,7 +328,7 @@ a.post-excerpt {
         opacity:0.9;
       }
   } /* END @media screen and (min-width: 680px) */
-  
+
   /*@media screen and (min-width: 480px) {
     a.post-excerpt {
       width:50%;
@@ -396,16 +396,16 @@ div.post {
   /*div.post h1:first-child, div.post h2:first-child { margin-top:0; }
   div.post h2.title, div.post h1:first-child { font-size:42px; }*/
   /*div.post h1 { margin-top: 1.618em; }*/
-  
+
   div.post actions, div.post info {
     color: #ccc;
   }
-  
+
   div.post actions {
     display:inline-block;
     float:right;
   }
-  
+
   div.post info {
     display:inline-block;
     /*xbackground:#DDF5EB;
@@ -422,7 +422,7 @@ div.post {
     border:0;
     display:block;
   }
-  
+
   div.post info.after {
     margin-top:30px;
     margin-right:-60px;
@@ -1352,14 +1352,14 @@ footer {
       padding-left:0.1em;
       margin-top: 5px;
     }
-  
+
   h1,h2 { font-size: 160%; }
   h3 { font-size: 130%; }
   h4 { font-size: 115%; }
   h5, h6 { font-size: 110%; }
 
   pre, code, tt { font-size:11px; }
-  
+
   div.content { padding:3em 1em; font-size:1.1em; }
   div.content blockquote { padding-left:2.5em; margin-left:-1em; }
   div.content div.quotation blockquote { margin-left:0px; }
