--- a/res/screen.css
+++ b/res/screen.css
@@ -19,7 +19,7 @@
 /* Base */
 * { margin:0; padding:0; font-family:inherit; }
 body {
-  background-image:url('res/hk screenshot.png');
+  background-image:url('res/hk_screenshot.png');
   color:#444;
   font:14px 'Poly', georgia, serif;
   line-height:1.5;
