--- a/res/screen.css
+++ b/res/screen.css
@@ -19,7 +19,7 @@
 /* Base */
 * { margin:0; padding:0; font-family:inherit; }
 body {
-  background-color: white;
+  background-color: lightgrey;
   color:#444;
   font:14px 'Poly', georgia, serif;
   line-height:1.5;
