--- a/res/screen.css
+++ b/res/screen.css
@@ -115,13 +115,14 @@ header {
   header ul.navigation li {
     display: inline-block;
     list-style: none;
-    margin-left: 1em;
+    margin-left: 1.3em;
+    font-weight: bold;
   }
   header ul.navigation li:first-child { margin-left: 0; }
   header ul.navigation li a {
     color: #474343;
     text-decoration: none;
-    font-size: 11px;
+    font-size: 12px;
     font-weight: bold;
   }
   header ul.navigation li a:hover { color: black; text-decoration: none; }
