--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen, projection" href="/res/screen.css" type="text/css">
     <link rel="stylesheet" media="print" href="/res/print.css" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Nikolaos Soultanidis" href="/atom.xml">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="res/favicon.ico">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="">
     {% if page.ios_app_name %}
